# TVgame

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
InputBridge/: InputBridge.csproj  Program.cs
QuickVerify/: Program.cs  QuickVerify.csproj
android-tv-receiver/: gradlew.bat  settings.gradle
android-tv-receiver/app/: build.gradle
design-concepts/: capture-html.js  tvgame-logo-board-v1.html  tvgame-receiver-ui-v2.html  tvgame-sender-dashboard-v2.html  tvgame-sender-dashboard-v3-clean.html
docs/: android-build-setup.md  stage2-local-verify.md
native-streamer/: gst_webrtc_sender.py
native/dxgi-capture/: Cargo.toml
native/dxgi-capture/src/: lib.rs
public/: receiver-utils.js  receiver.html  sender-browser.html
scripts/: install-android-build-tools.ps1  install-gstreamer.ps1  install-nodejs.ps1  install-vigembus.ps1
src/: low-latency-patches.js  sender.js  signaling-server.js
src/android-build/: cli.js  tooling.js
src/capture/: index.js  preview-server.js
src/desktop/: config-store.js  device-discovery.js  electron-builder.json  environment-service.js  environment-worker.js  ipc-handlers.js  (+4 more)
test/: android-build-tooling.test.js  android-tv-receiver.test.js  desktop-device-discovery.test.js  desktop-domain.test.js  desktop-electron-static.test.js  desktop-environment.test.js  desktop-process-service.test.js  input-bridge.test.js  low-latency-patches.test.js  native-streamer.test.js  quickverify.test.js  receiver-utils.test.js  release-package.test.js  rtp-pipeline.test.js  stage2-repair.test.js  stage2-tooling.test.js
(+33 files in other folders)
